# ccl-project-bench

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: libraries.cmake
src/: CMakeLists.txt  chunk.cpp  chunk.hpp  random_vector.cpp  random_vector.hpp
src/accumulate/: accumulate.hpp  atomic_accumulate.cpp  basic_accumulate.cpp  mutex_accumulate.cpp  perfect_mutex_accumulate.cpp  perferc_atomic_accumulate.cpp  relaxed_atomic_accumulate.cpp
src/function/: default_function_call.cpp  function.cpp  function.hpp
